# RAU_ROS2_workshop

./: README.md
src/common_protocol/: CMakeLists.txt  package.xml
src/head_package/: CMakeLists.txt  package.xml
src/head_package/include/head_package/: head_node.hpp
src/head_package/src/: exec.cpp  head_node.cpp
src/leg_node/: CMakeLists.txt  package.xml
src/leg_node/include/leg_node/: leg_node.hpp
src/leg_node/src/: leg_package.cpp
src/leg_package/: CMakeLists.txt  package.xml
src/leg_package/include/leg_node/: leg_node.hpp
src/leg_package/src/: exec.cpp  leg_node.cpp
src/vision_package/: CMakeLists.txt  package.xml
src/vision_package/include/vision_package/: vision_node.hpp
src/vision_package/src/: exec.cpp  vision_node.cpp
vision_package/: CMakeLists.txt  package.xml
vision_package/include/vision_package/: vision_node.hpp
